fix(web): make footer visible on github redirect page

--- a/apps/hhai.dev/src/layouts/global.scss
+++ b/apps/hhai.dev/src/layouts/global.scss
@@ -114,6 +114,7 @@ code {
 body {
   margin: 0;
   font-size: 16px;
+  min-height: 100vh;
 }
 
 a,
